--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-router-dom": "^5.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "simple-peer": "^9.11.0",
